...
    Dialog(onDismissRequest = onCerrar, properties = DialogProperties(usePlatformDefaultWidth = false)) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(MaterialTheme.colorScheme.onBackground)
                .clickable(onClick = onCerrar)
                .testTag("pantalla_grande")
        ) {
            Text(
                texto,
                color = MaterialTheme.colorScheme.background,
                fontSize = 44.sp,
                lineHeight = 54.sp,
...
                    .padding(32.dp)
            )
            IconButton(
                onClick = onCerrar,
                modifier = Modifier.align(Alignment.TopEnd).padding(8.dp).size(ALTO_TACTIL)
            ) {
                Icon(Icons.Filled.Close, contentDescription = "Cerrar", tint = MaterialTheme.colorScheme.background)
            }
        }
    }
}

